--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,10 @@
       "Composer\\Config::disableProcessTimeout",
       "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"php artisan inertia:start-ssr\" --names=server,queue,logs,ssr --kill-others"
     ],
-    "lint": "pint",
+    "lint": [
+      "pint",
+      "npm run format"
+    ],
     "test:lint": "pint --test",
     "test:types": "phpstan analyse",
     "test:unit": "pest --parallel",
